src/app/_components/ResponsiveImage.module.css
.container {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 100%; /* 16:9 aspect ratio; adjust as needed */
    overflow: hidden;
  }
  
  @media screen and (max-width: 600px) {
    .container {
      padding-bottom: 100%; /* Example for mobile aspect ratio; adjust as needed */
    }
  }
  

